--- a/Investment_App/AngularOKTA/src/app/fund-action/fund-action.component.html
+++ b/Investment_App/AngularOKTA/src/app/fund-action/fund-action.component.html
@@ -3,8 +3,8 @@
         <form [formGroup]="fundActionForm" (ngSubmit)="onSubmit(fundActionForm)">
             <div class="col-sm-8">
                 <div class="form-group">
-                    <label for="afundName">FundName</label>
-                    <input type="text" formControlName="afundName" class="form-control" placeholder="Enter Fund Name">
+                    <label for="fundName">FundName</label>
+                    <input type="text" formControlName="fundName" class="form-control" placeholder="Enter Fund Name">
                 </div>
             </div>
             <div class="col-sm-8">
