Login and Logout functionality

--- a/Investment_App/AngularOKTA/src/app/dashboard/dashboard.component.html
+++ b/Investment_App/AngularOKTA/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <div class="navbar">
         <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Investment App Dashboard </a>
         <button class="btn btn-primary" (click)="addNewFund()">Add new Fund</button>
-        <a href="logout"><i class="fa fa-fw fa-user"></i> Logout</a>
+        <button class="btn btn-secondary" (click)="logout()">Logout</button>
     </div>
 
     <div style="margin-top: 10px;">
