--- a/Investment_App/AngularOKTA/src/app/login/login.component.html
+++ b/Investment_App/AngularOKTA/src/app/login/login.component.html
@@ -1,1 +1,1 @@
-<button class="loginButton" (click)="login()">LOGIN</button>
+<button class="loginButton btn btn-primary" (click)="login()">Login with Okta</button>
