--- a/Investment_App/AngularOKTA/src/app/login/login.component.css
+++ b/Investment_App/AngularOKTA/src/app/login/login.component.css
@@ -1,5 +1,6 @@
 .loginButton{
-    float: left;
-    margin-top: 2px;
-    margin-left: 20px;
+    margin-top: 200px;
+    margin-left: 500px;
+    width: 300px;
+    height: 100px;
 }
