--- a/Investment_App/AngularOKTA/src/app/fund-action/fund-action.component.html
+++ b/Investment_App/AngularOKTA/src/app/fund-action/fund-action.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Investment App Dashboard </a>
+    <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Investment App</a>
     <button class="btn btn-secondary" (click)="logout()">Logout</button>
 </div>
 <div class="formStyle">
